# water_client

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/connection/: mod.rs
src/errors/: mod.rs
src/macros/: mod.rs
src/models/: mod.rs
src/models/client/: mod.rs
src/models/request/: mod.rs
src/models/response/: mod.rs
src/traits/: mod.rs
