[package]
name = "water_uri"
version = "0.1.0"
edition = "2021"
authors = ["Hassan Sharara <hassansharara12@gmail.com>"]
repository = "https://github.com/HassanSharara/water_client"
license = "MIT"
description = "easy http Url parser that support http and https schemas"
categories = ["network-programming", "web-programming::http-client" ]
keywords = ["uri","water_uri", "water-uri", "http-uri","url-parse"]
readme = "README.md"


