[package]
name = "water_client"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
reqwest = "0.12.12"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" ,optional = true }
twoway = "0.2.2"
water_uri = {path = "D:\\projects\\rust\\packages\\water_uri"}


[features]
debugging = ["tracing"]
