[package]
name = "water_client"
version = "0.1.0"
edition = "2021"
authors = ["Hassan Sharara <hassansharara12@gmail.com>"]
repository = "https://github.com/HassanSharara/water_client/tree/water_client"
license = "MIT"
description = "easy http client for more control over http connection and requests"
categories = ["network-programming", "web-programming::http-client" ]
keywords = ["http_client","http","http-request","water_client","http-client"]

[dev-dependencies]
reqwest = "0.12.12"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" ,optional = true }
twoway = "0.2.2"
water_uri = "0.1.2"



[features]
debugging = ["tracing"]
